--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,11 @@ nav ul li {
     margin: 0px 30px;
   }
 }
-nav ul li a {
+
+nav ul li a, 
+nav ul li button {
   color:#fd4848!important;
-  text-decoration: underline;
+  text-decoration: underline!important;
 }
 
 .page {
