--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@ h1 {
   margin-top:0;
   padding: 1rem 1rem 0 1rem;
 }
+
+@media only screen and (max-width: 500px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+}
 .appbar {
   display: flex;
   flex-direction: row-reverse;
