--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,9 @@ nav ul {
 nav ul li {
   margin: 0 1em;
   font-family: 'Mountains of Christmas', cursive;
-  font-size: 24px;
   font-size: 1.5rem
 }
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   nav {
     width: 100%;
   }
