--- a/src/Button.css
+++ b/src/Button.css
@@ -16,11 +16,11 @@
     border-radius: 25px;
     box-shadow: none;
     border: none;
-    color:white;
+    background:#dae8df;
+    color:#499f68;
     font-size: 18px;
     cursor: pointer;
     font-weight: 500;
-    background: none;
 }
 
 .button--link {
