Fix styling of edit name buttons

--- a/src/Button.css
+++ b/src/Button.css
@@ -34,9 +34,9 @@
 }
 
 .button--small {
-    padding: 0;
+    padding: .5em;
     font-size: small;
-    min-width: auto;;
+    min-width: auto;
 }
 
 .button--primary.button--disabled {
