--- a/src/MyListView.scss
+++ b/src/MyListView.scss
@@ -1,3 +1,4 @@
+@import 'src/_colors.scss';
 
 .editTitleButtons {
     width: 240px;
@@ -8,9 +9,9 @@
 .share-list {
     max-width: 750px;
     margin:auto;
-    background: hsl(141.6, 66.1%, 93.5%);
+    background: #e3f9eb;
     padding: 10px 20px;
-    border: 4px dashed #fd4848;
+    border: 4px dashed $accent;
 }
 
 .copy-list-url {
@@ -78,7 +79,6 @@ ol li > span {
     display: flex;
     justify-content: space-between;
     align-items: first baseline;
-    flex-direction: column;
 }
 
 button svg {
