--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import 'src/_colors.scss';
+
 h1 {
   margin-top:0;
   padding: 1rem 1rem 0 1rem;
@@ -22,7 +24,7 @@ nav ul {
 }
 nav ul li {
   margin: 0 1em;
-  font-family: 'Mountains of Christmas', cursive;
+  font-family: $font-family;
   font-size: 1.5rem
 }
 @media (max-width: 500px) {
@@ -40,7 +42,7 @@ nav ul li {
 
 nav ul li a, 
 nav ul li button {
-  color:#fd4848!important;
+  color:$navText!important;
   text-decoration: underline!important;
 }
 
