--- a/src/Button.scss
+++ b/src/Button.scss
@@ -1,10 +1,12 @@
+@import 'src/_colors.scss';
+
 .button--primary{
     padding: 15px 25px;
-    border-radius: 25px;
+    border-radius: $buttonBorderRadius;
     box-shadow: none;
     border: none;
-    background:#499f68;
-    color:white;
+    background:$buttonPrimary;
+    color:$buttonPrimaryColour;
     font-size: 18px;
     cursor: pointer;
     font-weight: 500;
@@ -13,11 +15,11 @@
 
 .button--secondary {
     padding: 15px 25px;
-    border-radius: 25px;
+    border-radius:  $buttonBorderRadius;
     box-shadow: none;
     border: none;
     background:#dae8df;
-    color:#499f68;
+    color:$buttonPrimary;
     font-size: 18px;
     cursor: pointer;
     font-weight: 500;
