--- a/src/Loading.css
+++ b/src/Loading.css
@@ -2,117 +2,109 @@
     width:200px;
     height: 40px;
     margin: 40px auto;
+    display: flex;
 }
 
 @keyframes translateBaubleFirst {
     0% {
-        transform: translateX(0px);
         opacity: 0;
     }
   
     30% {
-        transform: translateX(20px);
         opacity: 1;
     }
   
     70% {
-        transform: translateX(20px);
         opacity: 1;   
     }
     100% {
        opacity: 0;
-       transform: translateX(180px);
     }
 }
 
 
 @keyframes translateBaubleSecond {
     0% {
-        transform: translateX(0px);
         opacity: 0;
     }
   
     30% {
-        transform: translateX(60px);
         opacity: 1;
     }
   
     70% {
-        transform: translateX(60px);
         opacity: 1;   
     }
     100% {
        opacity: 0;
-       transform: translateX(180px);
     }
 }
 
 @keyframes translateBaubleThird {
     0% {
-        transform: translateX(0px);
         opacity: 0;
     }
   
-    30% {
-        transform: translateX(100px);
+    30% {      
         opacity: 1;
     }
   
     70% {
-        transform: translateX(100px);
         opacity: 1;   
     }
     100% {
        opacity: 0;
-       transform: translateX(180px);
     }
 }
 
 @keyframes translateBaubleFourth {
     0% {
-        transform: translateX(0px);
         opacity: 0;
     }
   
     30% {
-        transform: translateX(140px);
         opacity: 1;
+        transform: scale(1.1);
     }
   
     70% {
-        transform: translateX(140px);
         opacity: 1;   
+        transform: scale(1.1);
     }
     100% {
        opacity: 0;
-       transform: translateX(180px);
     }
 }
 
 #loading .ball-wrapper{
-    animation-duration: 2.8s;
+    animation-duration: 2s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
-    position:absolute;  
+    margin: .5em;
+    opacity: 0;
 }
 
 #loading .ball-wrapper:nth-child(1){
-  animation-name: translateBaubleFirst;
+  animation-name: translateBaubleFourth;
+  animation-delay: 0;
 }
 
 #loading .ball-wrapper:nth-child(2){
-  animation-name: translateBaubleSecond;
+  animation-name: translateBaubleFourth;
+  animation-delay: .2s;
 }
 
 #loading .ball-wrapper:nth-child(3){
-  animation-name: translateBaubleThird;
+  animation-name: translateBaubleFourth;
+  animation-delay: .4s;
 }
 
 #loading .ball-wrapper:nth-child(4){
   animation-name: translateBaubleFourth;
+  animation-delay: .6s;
 }
 
-#loading .ball-wrapper .ring{
+/*#loading .ball-wrapper .ring{
   height:3px;
   width: 2px;
   border: .4px solid  #f99d24;
@@ -130,16 +122,16 @@
   left: 12px;
   top: 1.4px;
   border-radius: .8px;
-}
+}*/
 
 #loading .ball-wrapper .green-ball,
 #loading .ball-wrapper .red-ball {
-  background-color: #fd4848;
-  border-radius: 50%;
+  background-color: #475f8e;;
+  /*border-radius: 50%;*/
   height: 30px;
   width: 30px;
   position: relative;
 }
-#loading .ball-wrapper .green-ball{
+/*#loading .ball-wrapper .green-ball{
   background-color: #499f68;
-}
+}*/
