--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -21,4 +21,5 @@ $buttonPrimaryColour:#74572c;
 $buttonBorderRadius: 3px;
 $buttonSecondary:#dae8df;
 $buttonSecondaryColour:#74572c;
+$primraryGrey: #2b3932;
 /* #ffb54a */
