Make item description block

--- a/src/MyListView.scss
+++ b/src/MyListView.scss
@@ -74,6 +74,7 @@
     font-family: 'Caveat', cursive;
     font-size:32px;
     overflow-wrap: break-word;
+    display: block;
 }
 
 .item-description--bought{
