--- a/src/Santa.css
+++ b/src/Santa.css
@@ -1,3 +1,4 @@
+body,
 #wavingSanta.santa,
 #wavingSanta .hand.left::before{background:#FFF1C8}
 #wavingSanta.santa{position:relative;width:334px;height:360px;}
