--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,4 +1,4 @@
-/*$background: #c6538c;*/
+/* Xmas Theme */
 $navText: #fd4848;
 $accent:#fd4848;
 $font-family: 'Mountains of Christmas', cursive;
@@ -8,10 +8,11 @@ $buttonPrimary: #499f68;
 $buttonPrimaryColour:white;
 $buttonSecondary:#dae8df;
 $buttonSecondaryColour:#499f68;
+$buttonBorderRadius:25px;
+$primraryGrey: #2b3932;
 
-
-
-$accent:#435473;
+/* Default Theme */
+/*$accent:#435473;
 $navText: white;
 $primary: #313A4C;
 $font-family: 'Montserrat Alternates';
@@ -22,4 +23,5 @@ $buttonBorderRadius: 3px;
 $buttonSecondary:#dae8df;
 $buttonSecondaryColour:#74572c;
 $primraryGrey: #2b3932;
+*/
 /* #ffb54a */
