Switch to defaul theme

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,5 +1,5 @@
 /* Xmas Theme */
-$navText: #fd4848;
+/*$navText: #fd4848;
 $accent:#fd4848;
 $font-family: 'Mountains of Christmas', cursive;
 $background: #FFF1C8;
@@ -10,9 +10,10 @@ $buttonSecondary:#dae8df;
 $buttonSecondaryColour:#499f68;
 $buttonBorderRadius:25px;
 $primraryGrey: #2b3932;
+*/
 
 /* Default Theme */
-/*$accent:#435473;
+$accent:#435473;
 $navText: white;
 $primary: #313A4C;
 $font-family: 'Montserrat Alternates';
@@ -23,5 +24,4 @@ $buttonBorderRadius: 3px;
 $buttonSecondary:#dae8df;
 $buttonSecondaryColour:#74572c;
 $primraryGrey: #2b3932;
-*/
 /* #ffb54a */
