--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -14,7 +14,7 @@ $primraryGrey: #2b3932;
 
 /* Default Theme */
 $accent:#435473;
-$navText: white;
+$navText: $accent;
 $primary: #313A4C;
 $font-family: 'Montserrat Alternates';
 $background: #6AB28C;
