remove deprecated imports

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import 'src/_colors.scss';
+@use 'colors';
 
 h1 {
   margin-top:0;
@@ -24,7 +24,7 @@ nav ul {
 }
 nav ul li {
   margin: 0 1em;
-  font-family: $font-family;
+  font-family: colors.$font-family;
   font-size: 1.5rem
 }
 @media (max-width: 500px) {
@@ -42,7 +42,7 @@ nav ul li {
 
 nav ul li a, 
 nav ul li button {
-  color:$navText!important;
+  color: colors.$navText!important;
   text-decoration: underline!important;
 }
 
