--- a/src/Button.scss
+++ b/src/Button.scss
@@ -1,12 +1,12 @@
-@import 'src/_colors.scss';
+@use 'colors';
 
 .button--primary{
     padding: 15px 25px;
-    border-radius: $buttonBorderRadius;
+    border-radius: colors.$buttonBorderRadius;
     box-shadow: none;
     border: none;
-    background:$buttonPrimary;
-    color:$buttonPrimaryColour;
+    background: colors.$buttonPrimary;
+    color: colors.$buttonPrimaryColour;
     font-size: 18px;
     cursor: pointer;
     font-weight: 500;
@@ -15,11 +15,11 @@
 
 .button--secondary {
     padding: 15px 25px;
-    border-radius:  $buttonBorderRadius;
+    border-radius: colors.$buttonBorderRadius;
     box-shadow: none;
     border: none;
-    background:$buttonSecondary;
-    color:$buttonSecondaryColour;
+    background: colors.$buttonSecondary;
+    color: colors.$buttonSecondaryColour;
     font-size: 18px;
     cursor: pointer;
     font-weight: 500;
